Fixing margin collapse issue on thought of the day on iOS devices

--- a/web/app/themes/ihc/assets/styles/components/_thought-of-the-day.scss
+++ b/web/app/themes/ihc/assets/styles/components/_thought-of-the-day.scss
@@ -13,7 +13,8 @@
   }
 
   blockquote {
-    margin: 36px 0 10px;
+    margin: 0 0 10px;
+    padding-top: 36px;
     @extend .smooth;
 
     p {
